# poc-rocket-clean-archi

./: Cargo.toml  Rocket.toml  compose.yaml
src/: main.rs
src/adapters/controllers/: user_controller.rs
src/adapters/presenters/: api_error_presenter.rs  mod.rs  presenter.rs  user_presenter.rs
src/application/: mod.rs
src/application/usecases/: get_one_user_by_id.rs  mod.rs  usecase.rs
src/application/utils/: error_handling.rs
src/domain/entities/: api_error.rs  mod.rs  user_entity.rs
src/domain/repositories/: user_repository.rs
src/infrastructure/: app_state.rs  mod.rs
src/infrastructure/db/: connection.rs
src/infrastructure/models/: mod.rs  model.rs  user_model.rs
src/infrastructure/repositories/: mod.rs  pg_user_repository.rs  sqlite_user_repository.rs
